# gf2algebra

./: CMakeLists.txt  README.md  overview.md
gf2Algebra/: CMakeLists.txt  config.cpp  config.hpp  dynamicElement.cpp  dynamicElement.hpp  dynamicElementStorageType.hpp  gf256.cpp  gf256.hpp  gf2Algebra.hpp  identityIndexMap.hpp  io.hpp  iterator.hpp  representation.cpp  representation.hpp  subsetIndexMap.cpp  subsetIndexMap.hpp  valueCoefficientPair.cpp  valueCoefficientPair.hpp  z2k.cpp  z2k.hpp
gf2Algebra/ext/: addition.hpp  addition.hxx  additionAssignment.hpp  additionAssignment.hxx  algebra.cpp  algebra.hpp  copy.hpp  copy.hxx  densePolynomial.hpp  densePolynomial.hxx  densePolynomialIO.hpp  element.cpp  element.hpp  equal.hpp  equal.hxx  fwht.cpp  fwht.hpp  fwht.hxx  groupTransformation.cpp  groupTransformation.hpp  groupTransformation.hxx  identityIndexMap.hpp  iterator.hpp  multiplication.hpp  multiplication.hxx  representation.cpp  representation.hpp  representation.hxx  streamify.hpp  streamify.hxx  subsetIndexMap.cpp  subsetIndexMap.hpp
gf2Algebra/ext/internal/: denseRepresentationIterator.hpp  denseRepresentationIterator.hxx  dynamicVisitors.hpp  sparseRepresentationIterator.hpp  sparseRepresentationIterator.hxx  temporaryPointerProxy.hpp  valueCoefficientPair.hpp  valueCoefficientPair.hxx  z2kMaskFunctor.hpp
gf2Algebra/internal/: densePolynomial.hpp  densePolynomial.hxx  densePolynomialIO.hpp  denseRepresentationIterator.hpp  denseRepresentationIterator.hxx  dynamicAlgebra.cpp  dynamicAlgebra.hpp  dynamicElementImp.cpp  dynamicElementImp.hpp  dynamicVisitors.hpp  fwht.cpp  fwht.hpp  fwht.hxx  sparseRepresentationIterator.cpp  sparseRepresentationIterator.hpp  storedCoefficientProxy.cpp  storedCoefficientProxy.hpp  temporaryPointerProxy.hpp
gf2Algebra/operations/: addition.hpp  addition.hxx  additionAssignment.hpp  additionAssignment.hxx  copy.hpp  copy.hxx  multiplication.hpp  multiplication.hxx  multiply.hpp  multiply.hxx  transform.hpp  transform.hxx
src/: CMakeLists.txt  denseElement.cpp  denseElement.hpp  galoisField.cpp  galoisField.hpp  galoisFields.cpp  galoisFields.hpp  gf256.cpp  gf256.hpp  gf2Algebra.cpp  gf2Algebra.hpp  gf2algebra.cpp  gf2algebra.hpp  io.cpp  io.hpp  operations.cpp  operations.hpp  semiDenseElement.cpp  semiDenseElement.hpp  sparseElement.cpp  sparseElement.hpp  z2k.cpp  z2k.hpp
test/: CMakeLists.txt  basicsTest.cpp  dynamicAdditionTest.cpp  dynamicElementImplTest.cpp  dynamicMultiplicationTest.cpp  facadeMultiplicationSpeedTest.cpp  main.cpp  multiplicationSpeedTest.cpp  operationTest.cpp  transformTest.cpp  util.cpp  util.hpp
